--- a/index.html
+++ b/index.html
@@ -770,6 +770,17 @@
         </div>
     </footer>
 
+    <!-- FAB: ASK THE EXPERT -->
+    <a href="https://notebooklm.google.com/notebook/f1b437ac-345e-4947-8054-dbb0d92da903"
+       target="_blank" rel="noopener noreferrer"
+       class="fab-glow fixed bottom-6 left-6 z-[100] w-14 h-14 md:w-16 md:h-16 rounded-full flex items-center justify-center bg-dubai-teal/90 backdrop-blur-md border-2 border-dubai-teal/60 text-white transition-all duration-300 cursor-pointer group"
+       title="שאל את המומחה">
+        <i class="fa-solid fa-wand-magic-sparkles text-lg md:text-xl"></i>
+        <span class="absolute bottom-full left-1/2 -translate-x-1/2 mb-3 whitespace-nowrap bg-dubai-deep-blue text-white text-xs font-bold px-3 py-1.5 rounded-full opacity-0 group-hover:opacity-100 transition-opacity duration-300 pointer-events-none" data-i18n-html="fab_tooltip">
+            שאל את המומחה <i class="fa-solid fa-sparkles text-dubai-teal mr-1"></i>
+        </span>
+    </a>
+
     <script>
         // =============================================
         // LANGUAGE STATE
